--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 Werkzeug==3.0.1
 gunicorn==21.2.0
+azure-cognitiveservices-speech==1.34.0
+azure-storage-blob==12.19.0
 itsdangerous==2.1.2
 joblib==1.3.2
 numpy==1.26.2
